--- a/P5_JAVASCRIPT/TP4/tp4.html
+++ b/P5_JAVASCRIPT/TP4/tp4.html
@@ -9,7 +9,6 @@
 <body>
 	<div class="general">
 		<div class="second">
-			<form>
 					<input type="text" id="password" readonly><br><br>
 				<div class="form0">
 					<label for="length"><h3>Longueur du mot de passe :</h3></label>
@@ -31,9 +30,8 @@
 					<label for="special"><h3>Contient des caractères spéciaux</h3></label>
 					<input type="checkbox" id="special" checked><br>
 				</div>
-				<button id="generate" disabled><h2>Générer le mot de passe</h2></button>
+				<button id="generate"><h2>Générer le mot de passe</h2></button>
 				<br>
-			</form>
 		</div>
 	</div>
 <script src="tp4.js"></script>
