--- a/P5_JAVASCRIPT/TP5/tp5.html
+++ b/P5_JAVASCRIPT/TP5/tp5.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="tp5.css">
 </head>
 <body>
-    
-    
+    <div id = "quiz">
+        <h2 id="questions"></h2>
+        <label><input type="radio" name="answer" value="a"> <span id="a"></span></label><br>
+        <label><input type="radio" name="answer" value="b"> <span id="b"></span></label><br>
+        <label><input type="radio" name="answer" value="c"> <span id="c"></span></label><br>
+        <label><input type="radio" name="answer" value="d"> <span id="d"></span></label><br>
+        <button id="suivant">Suivant</button>
+    </div>
+    <button id="replay" onclick="location.reload()">Rejouer</button>
     <script src="tp5.js"></script>
 </body>
 </html>
