--- a/P5_JAVASCRIPT/index.html
+++ b/P5_JAVASCRIPT/index.html
@@ -12,8 +12,8 @@
 		<a href="./TP2/tp2.html">TP2</a><br><br>
     <a href="./TP3/tp3.html">TP3</a><br><br>
 		<a href="./TP4/tp4.html">TP4</a><br><br>
-		<a href="tp5.html">TP5</a><br><br>
-		<a href="tp6.html">TP6</a><br><br>
-		<a href="tp7.html">TP7</a><br><br>
+		<a href="./TP5/tp5.html">TP5</a><br><br>
+		<a href="./TP6/tp6.html">TP6</a><br><br>
+		<a href="./TP7/tp7.html">TP7</a><br><br>
 </body>
 </html>
